updating news section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-<title>Amina A. Abdu</title>
+<title>Amina Abdu</title>
 
 
 
@@ -91,8 +91,8 @@ My research interests center around computing practices in social prediction sys
 
 </ul>
 
-In particular, I'm thinking about the mathematical operationalization of social constructs, its limitations, and the factors that mediate this translation process— including measurement, power, and law.  
-
+In particular, I'm thinking about the mathematical operationalization of social constructs, its limitations, and the factors that mediate this translation process— including measurement, power, and law. <br/>
+I'm also interested in how both data products as well as statistical and computational tools are used to inform policy decisions. Within this area, I am currently exploring state data collection practices, government procurement of algorithmic technologies, and the rise of "evidence-based policy" in academic public policy.
 </div>
 
 
@@ -136,7 +136,11 @@ These experiences shaped my current interest in the role of computation in both 
 
 <ul class="arrow">
 
-<li><b>aug. 2021 - </b>started my Ph.D. at UMSI!</li>
+<li><b>june 2022 - </b> I am attending the Doctoral Consortium at FAccT in Seoul </li>
+
+<li><b> november 2021/february 2022 - </b> I am participating in a workshop about Everyday Misinformation at UIUC </li>
+
+<li><b>august 2021 - </b> I started my Ph.D. at UMSI!</li>
 
 </ul>
 
