--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
 
-<p>I am a second year Ph.D. student @ the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information">University of Michigan School of Information</a> (UMSI),
+<p>I am a first year Ph.D. student @ the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information">University of Michigan School of Information</a> (UMSI),
 
 where I am very fortunate to be advised by <a href="https://azjacobs.com/" target="_blank">Abigail Jacobs</a> and <a href="https://irenepasquetto.com/" target="_blank">Irene Pasquetto</a>.</p>
 
@@ -135,6 +135,10 @@ These experiences shaped my current interest in the role of computation in both 
 <h2>Recent Updates</h2>
 
 <ul class="arrow">
+
+ <li><b>november 2022 - </b> I am attending CSCW's Critical Public Interest Tech Workshop </li>   
+    
+<li><b>november 2022 - </b> I am giving a guest lecture in SI 110: Introduction to Information about data science methods and ethics </li>
 
 <li><b>june 2022 - </b> I am attending the Doctoral Consortium at FAccT in Seoul </li>
 
