--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ where I am very fortunate to be advised by <a href="https://azjacobs.com/" targe
 <!-- > c.v. (updated september 2021) [<a href="/docs/aabdu_cv.pdf">pdf</a>]<br/> -->
 
 
-<span id="researchb">+</span>  <a onclick="toggledisplay('research'); togglebullet('researchb');">research interests<br/></a>
+<span id="researchb">+</span>  <a onclick="toggledisplay('research'); togglebullet('researchb');">my interests<br/></a>
 
 <div id="research" style="display:none; margin-left: 26px;">
 
@@ -92,19 +92,27 @@ My research interests center around computing practices in social prediction sys
 </ul>
 
 In particular, I'm thinking about the mathematical operationalization of social constructs, its limitations, and the factors that mediate this translation process— including measurement, power, and law. <br/>
-I'm also interested in how both data products as well as statistical and computational tools are used to inform policy decisions. Within this area, I am currently exploring state data collection practices, government procurement of algorithmic technologies, and the rise of "evidence-based policy" in academic public policy.
+I'm also interested in datafication and quantification in policy-making. Within this area, I am currently exploring state data collection practices, government procurement of algorithmic technologies, and the rise of "evidence-based policy" in academic public policy.
 </div>
 
 
-<span id="pubsb">+</span>  <a onclick="toggledisplay('pubs'); togglebullet('pubsb');">publications<br/></a>
+<span id="pubsb">+</span>  <a onclick="toggledisplay('pubs'); togglebullet('pubsb');">research<br/></a>
 
 <div id="pubs" style="display:none; margin-left: 26px;">
 
-<i>Coming Soon</i>
+<i>working papers</i>
 
 <ul class="arrow">
 
-<li> I'm working on it! </li>
+<li> Amina Abdu, Abigail Z. Jacobs & Irene Pasquetto. An Empirical Analysis of Racial Categories in the Algorithmic Fairness Literature. </li>
+
+</ul>
+
+<i> publications (non-archival) </i>
+
+<ul class="arrow">
+
+<li> Amina Abdu, Lauren Chambers, Abigail Z. Jacobs & Deirdre Mulligan. The Limits of (Algorithmic) Transparency: Lessons Learned from the U.S. Census Bureau’s Implementation of Differential Privacy. <i>Data (Re)Makes the World Conference</i>, Information Society Project at Yale Law School. Forthcoming 2023. </li>
 
 </ul>
 
@@ -136,7 +144,11 @@ These experiences shaped my current interest in the role of computation in both 
 
 <ul class="arrow">
 
- <li><b>november 2022 - </b> I am attending CSCW's Critical Public Interest Tech Workshop </li>   
+<li><b>march 2023 - </b> I am attending the Data (Re)Makes the World Conference in New Haven, CT. I will be presenting work on the Census Bureau's implementation of differential privacy (joint work with Lauren Chambers, Abigail Jacobs & Deirdre Mulligan). </li>  
+
+<li><b>december 2022 - february 2023 - </b> I am excited to join the Federation of American Scientists and Kapor Center's <a target="_blank" href="https://www.dayoneproject.org/accelerators/tech-equity-accelerator/">Racial Equity in Tech Policy Accelerator</a>. </li> 
+
+<li><b>november 2022 - </b> I am attending CSCW's Critical Public Interest Tech Workshop </li>   
     
 <li><b>november 2022 - </b> I am giving a guest lecture in SI 110: Introduction to Information about data science methods and ethics </li>
 
