--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@ These experiences shaped my current interest in the role of computation in both 
 
 <li><b>december 2022 - february 2023 - </b> I am excited to join the Federation of American Scientists and Kapor Center's <a target="_blank" href="https://www.dayoneproject.org/accelerators/tech-equity-accelerator/">Racial Equity in Tech Policy Accelerator</a>. </li> 
 
-<li><b>november 2022 - </b> I am attending CSCW's Critical Public Interest Tech Workshop </li>   
+<li><b>november 2022 - </b> I am attending CSCW's Critical Public Interest Tech Workshop. </li>   
     
-<li><b>november 2022 - </b> I am giving a guest lecture in SI 110: Introduction to Information about data science methods and ethics </li>
+<li><b>november 2022 - </b> I am giving a guest lecture in <b>SI 110: Introduction to Information</b> about data science methods and ethics. </li>
 
-<li><b>june 2022 - </b> I am attending the Doctoral Consortium at FAccT in Seoul </li>
+<li><b>june 2022 - </b> I am attending the Doctoral Consortium at FAccT in Seoul. </li>
 
 <li><b> november 2021/february 2022 - </b> I am participating in a workshop about Everyday Misinformation at UIUC </li>
 
