--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="Amina Abdu is a Ph.D. student at the University of Michigan's School of Information." />
+<meta name="description" content="Amina Abdu is a Ph.D. student at the University of Michigan School of Information." />
 
 
 
@@ -56,7 +56,7 @@
 
 
 
-<p>I am a first year Ph.D. student @ the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information">University of Michigan School of Information</a> (UMSI),
+<p>I am a second year Ph.D. student @ the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information">University of Michigan School of Information</a> (UMSI),
 
 where I am very fortunate to be advised by <a href="https://azjacobs.com/" target="_blank">Abigail Jacobs</a> and <a href="https://irenepasquetto.com/" target="_blank">Irene Pasquetto</a>.</p>
 
