--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ I'm also interested in datafication and quantification in policy-making and publ
 <ul class="arrow">
 
 <li> An Empirical Analysis of Racial Categories in the Algorithmic Fairness Literature.<br>
-     <b>Amina Abdu</b>, Abigail Z. Jacobs & Irene V. Pasquetto. <i>ACM Conference on Fairness, Accountability and Transparency (FAccT).</i> Forthcoming 2023.</li> 
+     <b>Amina Abdu</b>, Irene V. Pasquetto & Abigail Z. Jacobs. <i>ACM Conference on Fairness, Accountability and Transparency (FAccT).</i> Forthcoming 2023.</li> 
 
 </ul>
 
@@ -157,7 +157,7 @@ These experiences shaped my current interest in the role of computation in both 
 
 <ul class="arrow">
 
-<li><b>june 2023 - </b> We will be presenting our work on the adoption of racial categories in algorithmic fairness research at FAccT in Chicago, IL (joint with Irene Pasquetto & Abigail Jacobs). </li>  
+<li><b>june 2023 - </b> I am excited to present our work on the adoption of racial categories in algorithmic fairness research at FAccT in Chicago, IL (joint with Irene Pasquetto & Abigail Jacobs). This is my first paper :-)</li> 
 
 <li><b>june 2023 - </b> We will be presenting our work at the Privacy Law Scholars Conference (PLSC) in Boulder, CO (joint with Lauren Chambers, Abigail Jacobs & Deirdre Mulligan). </li>  
 
