minor content updates

--- a/index.html
+++ b/index.html
@@ -106,9 +106,18 @@ I'm also interested in datafication and quantification in policy-making and publ
     
 <li> Public Administration. <br>
     
-    <b>Amina Abdu</b> & Abigail Z. Jacobs. In Burrell, J., R. Singh, and P. Davison (eds.), <i>Keywords on the Datafied State</i>. Data & Society.</li> </ul>  
+    <b>Amina Abdu</b> & Abigail Z. Jacobs. In Burrell, J., R. Singh, and P. Davison (eds.), <i>Keywords on the Datafied State</i>. Data & Society.</li> 
 
-<b><i>publications (archival)</i></b>
+ <li>  Transparency, Technocracy, and Trust in Participatory Algorithmic Governance: Lessons Learned from the U.S. Census Bureau’s Implementation of Differential Privacy. <br>
+     <b>Amina Abdu</b>*, Lauren Chambers*, Abigail Z. Jacobs & Deirdre K. Mulligan.
+    <ul class="dblarrow">
+        <li> Presented at <i>Data (Re)Makes the World Conference</i>, Information Society Project at Yale Law School (2023) </li>
+        <li> Presented at <i>Privacy Law Scholars Conference</i> (2023)</li>
+    </li></ul> 
+
+</ul>  
+
+<b><i>publications</i></b>
 
 <ul class="arrow">
 
@@ -117,17 +126,6 @@ I'm also interested in datafication and quantification in policy-making and publ
 
 </ul>
 
-<b><i>publications (non-archival) </i></b>
-
-<ul class="arrow">
-
-<li>  The Limits of (Algorithmic) Transparency: Lessons Learned from the U.S. Census Bureau’s Implementation of Differential Privacy. <br>
-     <b>Amina Abdu</b>*, Lauren Chambers*, Abigail Z. Jacobs & Deirdre K. Mulligan.
-    <ul class="dblarrow">
-    <li> Presented at <i>Data (Re)Makes the World Conference</i>, Information Society Project at Yale Law School (2023) </li>
-    <li> Presented at <i>Privacy Law Scholars Conference</i> (2023)</li>
-    </li></ul>
-</ul>
 * denotes equal contribution
 </div>
 
