--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ I'm also interested in datafication and quantification in policy-making and publ
 
 <ul class="arrow">
 
-<li> An Empirical Analysis of Racial Categories in the Algorithmic Fairness Literature. [<a href="https://arxiv.org/abs/2309.06607" target="_blank">arXiv</a>, <a href="https://dl.acm.org/doi/abs/10.1145/3593013.3594083" target="_blank">proceedings</a>]<br>
+<li> An Empirical Analysis of Racial Categories in the Algorithmic Fairness Literature. [<a href="https://arxiv.org/abs/2309.06607" target="_blank">arXiv</a>, <a href="https://dl.acm.org/doi/abs/10.1145/3593013.3594083" target="_blank">proceedings</a>, <a href="https://montrealethics.ai/an-empirical-analysis-of-racial-categories-in-the-algorithmic-fairness-literature/" target="_blank">popular writeup</a>]<br>
      <b>Amina A. Abdu</b>, Irene V. Pasquetto & Abigail Z. Jacobs. <i>ACM Conference on Fairness, Accountability and Transparency (FAccT).</i> 2023.</li> 
 
 </ul>
@@ -165,18 +165,26 @@ These experiences shaped my current interest in the role of computation in both 
 
 <ul class="arrow">
 
+<!-- >    <li><b>june 2024 - </b> I will be a panelist at a roundtable on the Datafied State at the Annual Meeting of the Law & Society Association in Denver, CO. </li> -->
+
+<li><b>may 2024 - </b> Excited to discuss our work "Legitimacy from the Administrative State to the Algorithmic State" at PLSC in Washington, DC  (joint work with Abigail Jacobs). </li> 
+
+<li><b>february 2024 - </b> I gave a talk about racial classification practices in algorithmic fairness resarch at Northeastern's <a target="_blank" href="https://www.networkscienceinstitute.org/"> Network Science Institute (NetSI)</a> in Boston, MA. </li> 
+
 <li><b>august 2023 - </b> I successfully defended my field prelim about quantification and legitimacy in U.S. public administration. I am now a Ph.D. candidate!  </li> 
 
-<li><b>july 2023 - </b>  I am participating in a workshop on Sociotechnical Approaches to Measurement and Validation for Safety in AI hosted by Northwestern's Center for Advancing Safety of Machine Intelligence (CASMI) in Evanston, IL.  </li> 
+<li><b>july 2023 - </b>  I am participating in a workshop on Sociotechnical Approaches to Measurement and Validation for Safety in AI hosted by Northwestern's <a target="_blank" href="https://casmi.northwestern.edu/"> Center for Advancing Safety of Machine Intelligence (CASMI)</a> in Evanston, IL.  </li> 
 
 <li><b>june 2023 - </b> I am excited to present our work on the adoption of racial categories in algorithmic fairness research at FAccT in Chicago, IL (joint with Irene Pasquetto & Abigail Jacobs). This is my first paper :-)</li> 
 
-<li><b>june 2023 - </b> We will be presenting our work on the Census Bureau's adoption of differential privacy at the Privacy Law Scholars Conference (PLSC) in Boulder, CO (joint with Lauren Chambers, Abigail Jacobs & Deirdre Mulligan). </li>  
+
 
 <li><span id="oldnewsb">+</span>  <a onclick="toggledisplay('oldnews'); togglebullet('oldnewsb');">older updates<br/></a></li>
 
     <div id="oldnews" style="display:none;">
-    <li><b>may 2023 - </b> I am participating in a workshop on Methods for Inclusivity in Data Collection hosted by Partnership on AI. </li>  
+    <li><b>june 2023 - </b> We will be presenting our work on the Census Bureau's adoption of differential privacy at the Privacy Law Scholars Conference (PLSC) in Boulder, CO (joint with Lauren Chambers, Abigail Jacobs & Deirdre Mulligan). </li>  
+
+    <li><b>may 2023 - </b> I am participating in a workshop on Methods for Inclusivity in Data Collection hosted by Partnership on AI. See the resulting whitepaper <a target="_blank" href="https://partnershiponai.org/paper/eyes-off-my-data/">here</a>! </li>  
     
     <li><b>march 2023 - </b> I am attending the Data (Re)Makes the World Conference in New Haven, CT. We will be presenting work on the Census Bureau's implementation of differential privacy (joint work with Lauren Chambers, Abigail Jacobs & Deirdre Mulligan). </li>  
 
