adding missing link

--- a/index.html
+++ b/index.html
@@ -153,7 +153,13 @@ I'm also interested in datafication and quantification in policy-making and publ
     <li>  <i><a href="https://fas.org/publication/ensuring-racial-equity-in-federal-procurement-and-use-of-artificial-intelligence/" target="_blank">Ensuring Racial Equity in Federal Procurement and Use of Artificial Intelligence</a>.</i><br>
          <b>Amina Abdu</b>. <i>Day One Project.</i> Federation of American Scientists. 2023.</li> 
     
-    </ul>
+
+    <li>  <i><a href="https://www.regulations.gov/comment/OMB-2024-0005-0065" target="_blank">Response to Office of Management and Budget’s Request for Information on Methods and
+        Leading Practices for Advancing Public Participation and Community Engagement with the Federal Government</a>.</i><br>
+        <b>Amina Abdu</b> and Abigail Jacobs. 2024.</li> 
+   
+   </ul>
+
 </div>
 
 
@@ -184,7 +190,7 @@ These experiences shaped my current interest in the role of computation in both 
 
 <li><b>November 2024 - </b> New paper! <a target="_blank" href="https://doi.org/10.1002/asi.24965"> "Essential Work, Invisible Workers: The Role of Digital Curation in COVID-19 Open Science"</a> is out now in JASIST (joint work with Irene Pasquetto and Natascha Chtena).
 
-<li><b>October 2024 - </b> I was profiled for Faces of UMSI. Read about my <a target="_blank" href="">Ph.D. research and journey</a>. Huge thanks to Noor Hindi for the writeup and Jeff Smith for the photos!
+<li><b>October 2024 - </b> I was profiled for Faces of UMSI. Read about my <a target="_blank" href="https://www.si.umich.edu/about-umsi/news/amina-abdu-challenging-assumptions-umsi">Ph.D. research and journey</a>. Huge thanks to Noor Hindi for the writeup and Jeff Smith for the photos!
 
 <li><b>September 2024 - </b> I will be at the Privacy and Public Policy Conference in Washington, DC to discuss ongoing work about legitimacy strategies in formal privacy-enhancing technologies (joint work with Jeremy Seeman and Abigail Jacobs).
 
