--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ These experiences shaped my current interest in the role of computation in both 
 <h2>Recent Updates</h2>
 
 <ul class="arrow">
+<li><b>January 2025 - </b> I will be (virtually) attending the <a target="_blank" href="https://pairs25.notion.site">Participatory AI Research & Practice Symposium</a> to present our work on participation during the Census Bureau's adoption of differential privacy. Stop by and say hi!
 
 <li><b>November 2024 - </b> New paper! <a target="_blank" href="https://doi.org/10.1002/asi.24965"> "Essential Work, Invisible Workers: The Role of Digital Curation in COVID-19 Open Science"</a> is out now in JASIST (joint work with Irene Pasquetto and Natascha Chtena).
 
