--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ I'm also interested in datafication and quantification in policy-making and publ
      <b>Amina A. Abdu</b>, Jeremy Seeman & Abigail Z. Jacobs. Presented at <i>Privacy and Public Policy Conference</i> 2024.
 
 <li> <i>AI Evaluation and the Standards Metaphor.</i> <br>
-     <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank"><i>Governing Data Symposium</i></a> 2025. 
+     <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank"><i>Governing Data Symposium</i></a>, <i>Privacy Law Scholars Conference</i>, and <i>Meeting of the Society for Social Studies of Science (4S)</i>.
 
 
 </ul>  
@@ -187,6 +187,10 @@ These experiences shaped my current interest in the role of computation in both 
 <h2>Recent Updates</h2>
 
 <ul class="arrow">
+<li><b>May 2025 - </b> Excited to discuss our work-in-progress "AI Evaluations and the Standards Metaphor" at the Privacy Law Scholars Conference in Los Angeles, CA (joint work with Abigail Jacobs).
+
+<li><b>March 2025 - </b> I will be talking about AI Evaluations at the Governing Data Symposium in New Haven, CT (joint work with Abigail Jacobs).
+
 <li><b>January 2025 - </b> I will be (virtually) attending the <a target="_blank" href="https://pairs25.notion.site">Participatory AI Research & Practice Symposium</a> to present our work on participation during the Census Bureau's adoption of differential privacy. Stop by and say hi!
 
 <li><b>November 2024 - </b> New paper! <a target="_blank" href="https://doi.org/10.1002/asi.24965"> "Essential Work, Invisible Workers: The Role of Digital Curation in COVID-19 Open Science"</a> is out now in JASIST (joint work with Irene Pasquetto and Natascha Chtena).
