--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
 
 <p>I am a Ph.D. candidate at the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information">University of Michigan School of Information</a> (UMSI),
 
-where I am very fortunate to be advised by <a href="https://azjacobs.com/" target="_blank">Abigail Jacobs</a>. My research examines how computing practices and expertise shape public policy and its implementation in the
+where I am advised by <a href="https://azjacobs.com/" target="_blank">Abigail Jacobs</a>, and an affiliate researcher at the <a target ="_blank" href="https://esc.umich.edu/"> Center for Ethics, Society, and Computing</a> (ESC).
+</p>
+<p>
+My research examines how computing practices and expertise shape public policy and its implementation in the
 United States. I am an interdisciplinary social scientist, drawing from critical algorithm studies, organizational theory, administrative law, and science and technology studies (STS). Methodologically, my work employs qualitative analysis of scientific discourses across academia, industry, and government. You can find my CV <a href="docs/aabdu_cv.pdf">here</a>.
 
 </p>
@@ -109,13 +112,13 @@ I'm also interested in datafication and quantification in policy-making and publ
     
 
 
- <li> <i>Legitimacy and the Algorithmic Turn in the Administrative State.</i> <br>
+ <li> <i>Everyday Legitimacy Practices and the Algorithmic Turn in the Administrative State.</i> [<a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5160457">Preprint on SSRN</a>]<br>
      <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Presented at <i>Privacy Law Scholars Conference</i> 2024.
 
 <li> <i>Ethical Closure Problems in Formalizing Technologies.</i> <br>
      <b>Amina A. Abdu</b>, Jeremy Seeman & Abigail Z. Jacobs. Presented at <i>Privacy and Public Policy Conference</i> 2024.
 
-<li> <i>AI Evaluation and the Standards Metaphor.</i> <br>
+<li> <i>AI Evaluations and the Standards Metaphor.</i> <br>
      <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank"><i>Governing Data Symposium</i></a>, <i>Privacy Law Scholars Conference</i>, and <i>Meeting of the Society for Social Studies of Science (4S)</i>.
 
 
