re-organizing + news

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<meta name="description" content="Amina Abdu is a Ph.D. student at the University of Michigan School of Information." />
+<meta name="description" content="Amina Abdu is a Ph.D. candidate at the University of Michigan School of Information." />
 
 
 
@@ -118,8 +118,6 @@ I'm also interested in datafication and quantification in policy-making and publ
 <li> <i>Ethical Closure Problems in Formalizing Technologies.</i> <br>
      <b>Amina A. Abdu</b>, Jeremy Seeman & Abigail Z. Jacobs. Presented at <i>Privacy and Public Policy Conference</i> 2024.
 
-<li> <i>AI Evaluations and the Standards Metaphor.</i> <br>
-     <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank"><i>Governing Data Symposium</i></a>, <i>Privacy Law Scholars Conference</i>, and <i>Meeting of the Society for Social Studies of Science (4S)</i>.
 
 
 </ul>  
@@ -127,6 +125,10 @@ I'm also interested in datafication and quantification in policy-making and publ
 <b>Publications</b> <br>
 
 <ul class="arrow">
+
+<li> <i>AI Evaluations and the Standards Metaphor.</i> <br>
+     <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at the <i>Yale Journal of Law and Technology</i>. </li> 
+     Previously presented at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank">Governing Data Symposium 2025</a> and Privacy Law Scholars Conference 2025. 
 
 <li> <i><a href="http://doi.org/10.1002/asi.24965" target="_blank">Essential Work, Invisible Workers: The Role of Digital Curation in COVID-19 Open Science</a>.</i> <br>
     Irene V. Pasquetto, <b>Amina A. Abdu</b>, & Natascha Chtena. <i> Journal of the Association for Information Science and Technology (JASIST).</i> 2024.</li> 
@@ -187,12 +189,14 @@ These experiences shaped my current interest in the role of computation in both 
 
 <div class="w3-container" id="updates">
 
-<h2>Recent Updates</h2>
-
+<h2>Recent Updates</h2> 
 <ul class="arrow">
+
+<li><b>September 2025 - </b> I will be in Seattle, WA for 4S! I'll be speaking at a panel on "Ethics and/or Versus Regulation: Technoscience Policy and Governance in Different Registers," discussing AI governance by evaluation.
+
 <li><b>May 2025 - </b> Excited to discuss our work-in-progress "AI Evaluations and the Standards Metaphor" at the Privacy Law Scholars Conference in Los Angeles, CA (joint work with Abigail Jacobs).
 
-<li><b>March 2025 - </b> I will be talking about AI Evaluations at the Governing Data Symposium in New Haven, CT (joint work with Abigail Jacobs).
+<li><b>March 2025 - </b> I will be talking about AI evaluations at the Governing Data Symposium in New Haven, CT (joint work with Abigail Jacobs).
 
 <li><b>January 2025 - </b> I will be (virtually) attending the <a target="_blank" href="https://pairs25.notion.site">Participatory AI Research & Practice Symposium</a> to present our work on participation during the Census Bureau's adoption of differential privacy. Stop by and say hi!
 
