pre-expanded pubs section + news

--- a/index.html
+++ b/index.html
@@ -72,40 +72,10 @@ United States. I am an interdisciplinary social scientist, drawing from critical
 
 <hr>
 
+<span id="pubsb">-</span>  <a onclick="toggledisplay('pubs'); togglebullet('pubsb');">Writing<br/></a>
 
+<div id="pubs"; style="margin-left: 26px;">
 
-<div class="w3-container" id="shenanigans">
-
-<h2>More Info</h2>
-
-
-<span id="researchb">+</span>  <a onclick="toggledisplay('research'); togglebullet('researchb');">My Interests<br/></a>
-
-<div id="research" style="display:none; margin-left: 26px;">
-
-My research interests center around computing practices and technical expertise in policy-relevant settings, including:
-
-<ul class="arrow">
-
-<li id="p1"><b>quantitiatve social science research</b> </li>
-
-<li id="p2"><b>government agencies</b> </li>
-
-<li id="p2"><b>advocacy organizations and public interest technology organizations</b> </li>
-
-<li id="p3"><b>technology companies</b> </li>
-
-</ul>
-
-In particular, I'm thinking about how and when policy outcomes are measured, and the factors that mediate this process— including values, power, institutions, and law. <br/>
-I'm also interested in datafication and quantification in policy-making and public administration. Within this area, my work explores state data collection practices, government procurement of algorithmic technologies, and the rise of "evidence-based policy" in academic public policy. I am currently interested in how various groups use algorithmic technologies to gain legitimacy in policy spaces and how this in turn reshapes the types of knowledge, expertise, and values that are seen as a legitimate basis for policy interventions.  
-</div>
-
-
-<span id="pubsb">+</span>  <a onclick="toggledisplay('pubs'); togglebullet('pubsb');">Research<br/></a>
-
-<div id="pubs" style="display:none; margin-left: 26px;">
-<br>
 <b>Selected work in progress</b> <br>
 
 <ul class="arrow">
@@ -115,8 +85,8 @@ I'm also interested in datafication and quantification in policy-making and publ
  <li> <i>Everyday Legitimacy Practices and the Algorithmic Turn in the Administrative State.</i> [<a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5160457">Preprint on SSRN</a>]<br>
      <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Presented at <i>Privacy Law Scholars Conference</i> 2024.
 
-<li> <i>Ethical Closure Problems in Formalizing Technologies.</i> <br>
-     <b>Amina A. Abdu</b>, Jeremy Seeman & Abigail Z. Jacobs. Presented at <i>Privacy and Public Policy Conference</i> 2024.
+<li> <i>Ethical Closure Problems in Formalizing Technologies.</i> [<a href="docs/closure-preprint.pdf">Preprint</a>]<br>
+     <b>Amina A. Abdu</b>, Jeremy Seeman & Abigail Z. Jacobs. Presented at <i>Privacy and Public Policy Conference</i> 2024. 
 
 
 
@@ -167,6 +137,34 @@ I'm also interested in datafication and quantification in policy-making and publ
 
 </div>
 
+<div class="w3-container" id="shenanigans">
+
+<h2>More Info</h2>
+
+
+<span id="researchb">+</span>  <a onclick="toggledisplay('research'); togglebullet('researchb');">More on my research interests<br/></a>
+
+<div id="research"; style="display:none; margin-left: 26px;">
+
+My research interests center around computing practices and technical expertise in policy-relevant settings, including:
+
+<ul class="arrow">
+
+<li id="p1"><b>quantitiatve social science research</b> </li>
+
+<li id="p2"><b>government agencies</b> </li>
+
+<li id="p2"><b>advocacy organizations and public interest technology organizations</b> </li>
+
+<li id="p3"><b>technology companies</b> </li>
+
+</ul>
+
+In particular, I'm thinking about how and when policy outcomes are measured, and the factors that mediate this process— including values, power, institutions, and law. <br/>
+My work also examines datafication and quantification in policy-making and public administration. Within this area, my work explores state data collection practices, government procurement, development, and deployment of algorithmic technologies, and the rise of "evidence-based policy" in academic public policy. I am currently interested in how various groups use algorithmic technologies to gain legitimacy in policy spaces and how this in turn reshapes the types of knowledge, expertise, and values that are seen as a legitimate basis for policy interventions.<br><br>  
+</div>
+
+
 
 <span id="oldb">+</span> <a id="rclick" onclick="toggledisplay('old'); togglebullet('oldb');">In a previous life...<br/></a>
 
@@ -191,6 +189,7 @@ These experiences shaped my current interest in the role of computation in both 
 
 <h2>Recent Updates</h2> 
 <ul class="arrow">
+<li><b>October 2025 - </b> I was awarded the <a target="_blank" href="https://www.si.umich.edu/programs/phd-information/phd-student-funding/umsi-deans-fellowship#:~:text=The%20UMSI%20Dean's%20Fellowship%20is,each%20fall%20and%20winter%20semester.">UMSI Dean's Fellowship</a>, which will support my dissertation research on government use of algorithmic technology!
 
 <li><b>September 2025 - </b> I will be in Seattle, WA for 4S! I'll be speaking at a panel on "Ethics and/or Versus Regulation: Technoscience Policy and Governance in Different Registers," discussing AI governance by evaluation.
 
