edit to reflect new paper title

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ United States. I am an interdisciplinary social scientist, drawing from critical
     
 
 
- <li> <i>Everyday Legitimacy Practices and the Algorithmic Turn in the Administrative State.</i> [<a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5160457">Preprint on SSRN</a>]<br>
+ <li> <i>Legitimacy Practices, Algorithms, and the New Bureaucratic Quantification.</i> [<a target="_blank" href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5160457">Preprint on SSRN</a>]<br>
      <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Presented at <i>Privacy Law Scholars Conference</i> 2024.
 
 <li> <i>Ethical Closure Problems in Formalizing Technologies.</i> [<a href="docs/closure-preprint.pdf">Preprint</a>]<br>
@@ -98,7 +98,7 @@ United States. I am an interdisciplinary social scientist, drawing from critical
 
 <li> <i>AI Evaluations and the Standards Metaphor.</i> <br>
      <b>Amina A. Abdu</b> & Abigail Z. Jacobs. Forthcoming at the <i>Yale Journal of Law and Technology</i>. </li> 
-     Previously presented at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank">Governing Data Symposium 2025</a> and Privacy Law Scholars Conference 2025. 
+     Previously presented at <a href="https://ibl.law.uiowa.edu/governing-data" target="_blank">Governing Data Symposium 2025</a>, Privacy Law Scholars Conference 2025, and the 2025 Annual Meeting of the Society for Social Studies of Science (4S). 
 
 <li> <i><a href="http://doi.org/10.1002/asi.24965" target="_blank">Essential Work, Invisible Workers: The Role of Digital Curation in COVID-19 Open Science</a>.</i> <br>
     Irene V. Pasquetto, <b>Amina A. Abdu</b>, & Natascha Chtena. <i> Journal of the Association for Information Science and Technology (JASIST).</i> 2024.</li> 
